<resources>
    <string name="app_name">Medivarsity</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_social">Sign in With Social Account</string>
    <string name="signup_social">Sign up With Social Account</string>
    <!-- <string name="facebook_app_id">269964603702474</string>-->
    <string name="register">Register</string>
    <string name="name">Name</string>
    <string name="contact">Contact Number</string>
    <string name="sign_up">Sign Up</string>
    <string name="key_hash">pzwNhLFHrtqoRhj6ePkGIfi9x7c=</string>
    <string name="dont_have"></string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <!--<string name="facebook_app_id">&lt;!&ndash;269964603702474&ndash;&gt;1063348920503285</string>-->
    <string name="facebook_app_id"><!--269964603702474-->2301620240071864</string>
    <!--<string name="fb_login_protocol_scheme">fb1920805507975170</string>-->
    <string name="fb_login_protocol_scheme">fb2301620240071864</string>
    <string name="gender">Gender</string>
    <string name="client_token"><!--26a458217d401a905689ceb8c846ffa1-->
        d60aeb5afb86db38436626988d118939</string>
    <string name="already_Account">Already have an account?</string>

    <string name="no_data">No data found</string>

    <string name="login">Login</string>
    <string name="type_verification">Please type the verification code to</string>
    <string name="code_type">Verification code</string>

    <string name="forget">Forget Password</string>


    <string name="user_name">Harry Osborn</string>
    <string name="name_of_institute">Prime Institute Of Medical Science</string>

    <string name="dm_path">DM Path</string>
    <string name="version_name">App Version 1.0</string>
    <string name="about_content">The idea of Medivarsity was conceived by Dr. Devesh Mishra to outreach the students online who were preparing for NEET PG and could not attend the live lectures.Medivarsity contains video recording of lectures with all diagrams and illustrations which will be as good as live lectures with the comfort of anytime/anywhere access.Q-banks, TnDs Test series and other innovative educational projects will be launched later.Medivarsity is committed to deliver the best to the students and to continuously grow and improve with the  help and support of the students.</string>
    <string name="any_concerns">For any concernce/question/grievances kindly</string>
    <string name="email_us_at">email us at</string>
    <string name="legal_email">legal@primeinstitute.com</string>
    <string name="travel_note">Travel Note</string>
    <string name="safety_notice">Safety Notice</string>
    <string name="out_fits">Outfits recommendations</string>
    <string name="lorem_faq">Lorem ipsum dolor sit amet,consectetur adipiscing elit sed do
        eiusmod tempor Incididunt ut labore et dolore manga aliqua.Ut enim ad minim veniam. </string>

    <string name="daily_update">Daily Update</string>
    <string name="subscribe">Subscribe</string>
    <string name="complete_list">Complete List of features</string>
    <string name="live_lect">Live Lectures</string>
    <string name="give_test">Give test</string>
    <string name="start_test">Start Test</string>
</resources>
