<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/size_10dp"
        android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorPrimary"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_marginTop="60dp"
        android:layout_gravity="center"
        android:text="@string/dm_path"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:layout_marginTop="@dimen/size_10dp"
        android:layout_gravity="center"
        android:text="@string/version_name"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:padding="@dimen/size_5dp"
        android:textSize="16sp"
        android:layout_margin="@dimen/size_14dp"
        android:layout_marginTop="@dimen/size_10dp"
        android:layout_gravity="center"
        android:text="@string/about_content"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="@dimen/size_10dp"
        android:layout_marginTop="@dimen/size_10dp"
        android:layout_marginLeft="@dimen/size_10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:layout_marginLeft="@dimen/size_10dp"
            android:textColor="@color/black"
            android:text="Terms &amp; Conditions"/>
        <ImageView
            android:layout_width="@dimen/size_24dp"
            android:layout_height="@dimen/size_24dp"
            android:layout_alignParentRight="true"
            android:src="@drawable/farword_black"/>
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_margin="@dimen/size_10dp"
        android:background="#eee"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="@dimen/size_10dp"
        android:layout_marginLeft="@dimen/size_10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:layout_marginLeft="@dimen/size_10dp"
            android:textColor="@color/black"
            android:text="Privacy Policy"/>
        <ImageView
            android:layout_width="@dimen/size_24dp"
            android:layout_height="@dimen/size_24dp"
            android:src="@drawable/farword_black"
            android:layout_alignParentRight="true" />
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_margin="@dimen/size_10dp"
        android:background="#eee"/>

    <RelativeLayout
        android:id="@+id/rl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="@dimen/size_10dp"
        android:layout_marginLeft="@dimen/size_10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:layout_marginLeft="@dimen/size_10dp"
            android:textColor="@color/black"
            android:text="Legal"/>
        <ImageView
            android:layout_width="@dimen/size_24dp"
            android:layout_height="@dimen/size_24dp"
            android:src="@drawable/farword_black"
            android:layout_alignParentRight="true" />
    </RelativeLayout>
    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_margin="@dimen/size_10dp"
        android:background="#eee"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size_40dp"
        android:orientation="vertical">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:layout_marginRight="@dimen/size_16dp"
        android:layout_marginLeft="@dimen/size_16dp"
        android:text="@string/any_concerns"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="@dimen/size_16dp"
        android:layout_marginLeft="@dimen/size_16dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:text="@string/email_us_at"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimary"
            android:layout_marginLeft="5dp"
            android:textSize="14sp"
            android:textStyle="bold"
            android:text="@string/legal_email"/>

    </LinearLayout>
    </LinearLayout>
    </LinearLayout>

</RelativeLayout>