<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.medavarsity.user.medavarsity.Utilities.CustomTextView
                android:id="@+id/subject_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:textSize="22sp"
                android:textStyle="bold" />


            <TextView
                android:id="@+id/subject_desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/subject_title"
                android:layout_gravity="center"
                android:layout_margin="@dimen/size_14dp"
                android:layout_marginTop="@dimen/size_10dp"
                android:lineSpacingExtra="2dp"
                android:padding="@dimen/size_5dp"
                android:text="@string/about_content"
                android:textColor="@color/black"
                android:textSize="16sp" />


            <com.medavarsity.user.medavarsity.Utilities.BoldCustomView
                android:id="@+id/feature_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/subject_desc"
                android:layout_margin="@dimen/size_10dp"
                android:text="Features"

                android:textColor="@color/colorPrimary"
                android:textSize="22sp"
                android:textStyle="bold" />


            <View
                android:id="@+id/view01"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@+id/feature_txt"
                android:background="@color/grey" />

            <RelativeLayout
                android:id="@+id/topicDetails_features_list_button"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_below="@+id/view01">

                <com.medavarsity.user.medavarsity.Utilities.CustomTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:textColor="@color/text_color_medium"
                    android:layout_margin="@dimen/size_10dp"
                    android:text="@string/complete_list"
                    android:textSize="@dimen/size_16dp" />

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="@dimen/size_30dp"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:src="@drawable/forward_black" />
            </RelativeLayout>

            <View
                android:id="@+id/view02"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@+id/topicDetails_features_list_button"
                android:background="@color/grey" />

            <RelativeLayout
                android:id="@+id/f2"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_below="@+id/view02">


                <TextView
                    android:id="@+id/buy_book"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_margin="@dimen/size_10dp"
                    android:text=""
                    android:textColor="@color/text_color_medium"
                    android:textSize="@dimen/size_16dp" />

                <Button
                    android:layout_width="80dp"
                    android:layout_height="@dimen/size_30dp"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="@dimen/size_5dp"
                    android:background="@color/colorPrimary"
                    android:src="@drawable/forward_black"
                    android:text="Buy"
                    android:textAllCaps="false"
                    android:textColor="@color/white" />

            </RelativeLayout>

            <View
                android:id="@+id/view03"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@+id/f2"
                android:background="@color/grey" />

            <RelativeLayout
                android:id="@+id/f3"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_below="@+id/view03">


                <TextView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_margin="@dimen/size_10dp"
                    android:text="@string/live_lect"
                    android:textColor="@color/text_color_medium"
                    android:textSize="@dimen/size_16dp" />

                <Button
                    android:layout_width="80dp"
                    android:layout_height="@dimen/size_30dp"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="@dimen/size_5dp"
                    android:background="@color/colorPrimary"
                    android:src="@drawable/forward_black"
                    android:text="@string/subscribe"
                    android:textAllCaps="false"
                    android:textColor="@color/white" />

            </RelativeLayout>
        </RelativeLayout>
    </ScrollView>
</LinearLayout>